<resources>
    <!--default-->
    <string name="app_name">VApp</string>
    <string name="add2album">Add to album</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="setWallpaper">Set as wallpaper</string>
    <string name="rename">Rename</string>
    <string name="crop">Crop</string>
    <string name="sortByDateDesc">Sort by date descending</string>
    <string name="sortByDateAsc">Sort by date ascending</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
    <string name="leftRotation">Left Rotation</string>
    <string name="rightRotation">Right Rotation</string>
    <string name="setHomeScreen">Set as Home Screen</string>
    <string name="setLockScreen">Set as Lock screen</string>
    <string name="setBothWallpaper">Set both</string>

    <string name="welcomeGuilde">Welcome to VAlbum\nApp Guide</string>
    <string name="resetSticker">Reset</string>
    <string name="saveSticker">Save</string>
    <string name="nextGuide">Next</string>
    <string name="PreviewGuide">Back</string>
    <string name="gotItGuide">Got it</string>
    <string name="errorSsticker">Can not add more Sticker!</string>
    <string name="addSticker">Add Sticker</string>
    <string name="Guide">Guide</string>
    <string name="nameAlbum">Name Album</string>
    <string name="numberPhotos">Number of Photo</string>
    <string name="touchGuide">Touch to open</string>
    <string name="touchSlideShow">Touch to open SlideShow</string>
    <string name="surfLeftOrRight">Swipe left or right to transfer images</string>
    <string name="surfUpOrDown">Swipe up or down to back</string>
    <string name="background">Theme</string>
    <string name="theme">Themes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="ok">OK</string>
    <string name="chooseTheme">Choose Theme</string>
    <string name="question">Do you really want to delete it?</string>

</resources>
