<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Detail_menu"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/details" />
    <item
        android:id="@+id/SetWallpaper_menu"
        android:title="@string/setWallpaper" />
    <item
        android:id="@+id/rename_menu"
        android:title="@string/rename"/>
    <item
        android:id="@+id/crop_menu"
        android:icon="@android:drawable/ic_menu_crop"
        android:title="@string/crop" />
    <item
        android:id="@+id/share_menu"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share" />


    <!-- Delete de duoi cung please -->
    <item
        android:id="@+id/delete_menu"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete" />
</menu>