<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <!-- <item
        android:id="@+id/crop_prew"
        android:icon="@android:drawable/ic_menu_crop"
        android:title="@string/crop"
        app:showAsAction="always|withText" />-->
    <item
        android:id="@+id/detail_prew"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/details" />
    <item
        android:id="@+id/share_prew"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"/>
    <item
        android:id="@+id/delete_prew"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete" />



</menu>