<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/chooseTheme" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/light"/>

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/dark"/>

        <RadioButton
            android:id="@+id/radio_auto"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:text="@string/auto" />

    </RadioGroup>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ok" />

</LinearLayout>