<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Add"
        android:icon="@android:drawable/ic_input_add"
        android:title=" "
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"
        tools:icon="@android:drawable/ic_menu_add" />
    <item
<<<<<<< HEAD
        android:id="@+id/Guide"
        android:title="@string/Guide" />
=======
        android:id="@+id/delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/background"
        android:title="@string/theme"
        />
>>>>>>> 225025fcbde1a5aeecc6304ad86023236bbb26db
</menu>